Finish basic user creation

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,3 +3,10 @@
 <%= link_to "Sign Up", "/users/new" %><br>
 
 <%= link_to "Log In", "/sessions/new" %>
+
+<h2>Users:<h2>
+  <% @users.each do |user| %>
+    <ul>
+      <li><%= link_to user.name, "/users/#{user.id}" %></li>
+    </ul>
+  <% end %>
